tests/typecheck/pass/yield.gg
gn g() -> int {
    int c = 42;
    yield c;
}

fn main() -> int {
    @(int) gen = g();
    print(next(gen));
    return 0;
}
