tests/typecheck/fail/nomain.gg
fn f() -> int {
    return 42;
}
